--- a/index.html
+++ b/index.html
@@ -30,11 +30,73 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-lg-2">
-                    <a class="mt-4 btn btn-lg btn-info" href="#reserveForm" data-toggle="tooltip" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>"> Reserve Campsite</a>
+                    <a class="mt-4 btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal"> Reserve Campsite</a>
                 </div>
             </div>
         </div>
     </header>
+<!--new modal for reserving a campsite--> 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h3 class="modal-title">Reserve a Campsite</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                        <form>
+                            <div class="row form-group">
+                                    <label class="col-sm-6"> Number of Campers </label>
+                                    <div class="col">
+                                        <select name="numCampers" id="numCampers" class="form-control">
+                                        <option selected>Select</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                        </select>
+                                    </div>
+                            </div>
+
+                            <div class="form-group"> 
+                                <div class="row">
+                                    <label class="col-sm-6"> Date </label>
+                                    <div class="col">
+                                        <input type="date" id="date" placeholder="date" class="form-control">                                          
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="row form-group">
+                                <label for="Campsite Type" class="col-form-label col-sm-6"> Campsite Type </label>
+                                <div class="col btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="options" id="siteTent" autocomplete="off" checked> Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="radio" name="options" id="siteRV" autocomplete="off"> RV
+                                    </label>
+                                    </div>
+                            </div>
+
+
+                            
+                            <div class="row"> 
+                                <div class="col">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button class="btn btn-primary" type="submit">Search</button><form id="reserveForm">
+                                </div>
+                            </div>
+                        </form>          
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--end of modal--> 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
@@ -134,6 +196,14 @@
                                     <span class="carousel-control-next-icon"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
+                                <div class="btn-group" id="carouselButton">
+                                    <button class="btn btn-danger btn-sm" id="carouselPause">
+                                        <i class="fa fa-pause"></i>
+                                    </button>
+                                    <button class="btn btn-danger btn-sm" id="carouselPlay">
+                                        <i class="fa fa-play"></i>
+                                    </button>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -261,9 +331,15 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+        $(function() {
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselPause").click(function(){
+                $(".carousel").carousel("pause");
+            });
+            $("#carouselPlay").click(function(){
+                $(".carousel").carousel("cycle");
+            });
+        });
     </script>
 
 </body>
