--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- Reserve Campsite Button Modal Start -->
 
                 <div class="col-md-4 col-lg-2">
-                    <a class="mt-4 btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal"> Reserve Campsite</a>
+                    <a class="mt-4 btn btn-lg btn-info" id="reserveButton"> Reserve Campsite </a> 
                 </div>
 
                 <!-- Reserve Campsite Button Modal End -->
@@ -51,7 +51,7 @@
     <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-info text-white">
+                <div class="modal-header">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
@@ -122,7 +122,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                    <a role="button" id="loginButton">
                         <i class="fa fa-sign-in"></i> Login
                     </a>
                 </span>
