renamed script.js file to scripts.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- Reserve Campsite Button Modal Start -->
 
                 <div class="col-md-4 col-lg-2">
-                    <a class="mt-4 btn btn-lg btn-info" id="reserveButton"> Reserve Campsite </a> 
+                    <a role="button" class="mt-4 btn btn-lg btn-info" id="reserveButton"> Reserve Campsite </a> 
                 </div>
 
                 <!-- Reserve Campsite Button Modal End -->
@@ -51,7 +51,7 @@
     <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-info text-white">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
