--- a/contactus.html
+++ b/contactus.html
@@ -29,6 +29,13 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+                 <!-- Reserve Campsite Button Modal Start -->
+
+                 <div class="col-md-4 col-lg-2">
+                    <a role="button" class="mt-4 btn btn-lg btn-info" id="reserveButton"> Reserve Campsite </a> 
+                </div>
+
+                <!-- Reserve Campsite Button Modal End -->
             </div>
         </div>
     </header>
@@ -46,6 +53,11 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
+                <span class="navbar-text ml-auto">
+                    <a role="button" id="loginButton">
+                        <i class="fa fa-sign-in"></i> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
